@@ -42,6 +42,9 @@
 
 using namespace std;
 
+bool log_int21 = false;
+bool log_fileio = false;
+
 static bool has_LOG_Init = false;
 static bool has_LOG_EarlyInit = false;
 static bool do_LOG_stderr = false;
@@ -826,6 +829,9 @@ void LOG::Init() {
 		debuglog=0;
 	}
 
+    log_int21 = sect->Get_bool("int21");
+    log_fileio = sect->Get_bool("fileio");
+
 	/* end of early init logging */
 	do_LOG_stderr = false;
 
@@ -923,6 +929,14 @@ void LOG::SetupConfigSection(void) {
 		Pstring = sect->Add_string(buf,Property::Changeable::Always,"false");
 		Pstring->Set_values(log_values);
 		Pstring->Set_help("Enable/Disable logging of this type.");
-	}
+    }
+
+    Prop_bool* Pbool;
+
+    Pbool = sect->Add_bool("int21",Property::Changeable::Always,false);
+    Pbool->Set_help("Log all INT 21h calls");
+
+    Pbool = sect->Add_bool("fileio",Property::Changeable::Always,false);
+    Pbool->Set_help("Log file I/O through INT 21h");
 }
 
