@@ -37,6 +37,9 @@
 #include "serialport.h"
 #include "dos_network.h"
 
+extern bool log_int21;
+extern bool log_fileio;
+
 Bitu INT29_HANDLER(void);
 Bit32u BIOS_get_PC98_INT_STUB(void);
 
@@ -415,6 +418,14 @@ void XMS_DOS_LocalA20EnableIfNotEnabled(void);
 static Bitu DOS_21Handler(void) {
     bool unmask_irq0 = false;
 
+    /* NTS to ognjenmi: Your INT 21h logging patch was modified to log ALL INT 21h calls (the original
+     *                  placement put it after the ignore case below), and is now conditional on
+     *                  whether INT 21h logging is enabled. Also removed unnecessary copying of reg_al
+     *                  and reg_ah to auto type variables. */
+    if (log_int21) {
+        LOG(LOG_CPU, LOG_DEBUG)("Executing interrupt 21, ah=%x, al=%x", reg_ah, reg_al);
+    }
+
     /* Real MS-DOS behavior:
      *   If HIMEM.SYS is loaded and CONFIG.SYS says DOS=HIGH, DOS will load itself into the HMA area.
      *   To prevent crashes, the INT 21h handler down below will enable the A20 gate before executing
@@ -433,9 +444,6 @@ static Bitu DOS_21Handler(void) {
     char name2[DOSNAMEBUF+2+DOS_NAMELENGTH_ASCII];
     
     static Bitu time_start = 0; //For emulating temporary time changes.
-    auto ah = reg_ah;
-    auto al = reg_al;
-    LOG(LOG_CPU, LOG_DEBUG)("Executing interrupt 21, ah=%x, al=%x", ah, al);
     switch (reg_ah) {
         case 0x00:      /* Terminate Program */
             /* HACK for demoscene prod parties/1995/wired95/surprisecode/w95spcod.zip/WINNERS/SURP-KLF
